FIX | GUI - Multlist word-wrap

--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -825,6 +825,7 @@ input:checked+.slider:before {
 
   .item {
     border-bottom: #999 1px solid;
+    word-wrap: break-word;
   }
 }
 
